# team-cli

./: .env.example  .gitignore  AGENTS.md  README.md  boot_ragflow.py  pyproject.toml  ragflow_server.py  test_ragflow.sh  test_ragflow_server.py
src/team_ai/: cli.py  config.py  mcp_config.py  redaction.py
src/team_ai/mcp/: __init__.py  gitea_server.py  rag_server.py
tests/: test_config.py  test_mcp_config.py  test_redaction.py
